--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -45,54 +45,54 @@
     <string name="set">Set</string>
     <string name="color_default">Default</string>
 
-    <!--Owlsnest statusbar-->
+    <!--statusbar-->
     <string name="statusbar_bar_title">Statusbar</string>
     <string name="statusbar_bar_summary">Adjust various statusbar elements</string>
     <string name="icon_category">Icons</string>
 
 
-    <!--Owlsnest Notification-->
+    <!--Notification-->
     <string name="notification_title">Notification</string>
     <string name="notification_summary">Adjust LEDs and notification behavior</string>
     <string name="notification_category">Notifications</string>
 
 
-    <!--Owlsnest Quick settings-->
+    <!--Quick settings-->
     <string name="quicksettings_title">Quick Settings</string>
     <string name="quicksettings_summary">Manage your quick tiles and expanded statusbar</string>
     <string name="expanded_category">Expanded</string>
 
 
-    <!--Owlsnest navigation-->
+    <!--navigation-->
     <string name="navigation_title">Navigation</string>
     <string name="navigation_summary">Customize navigation bar style and behavior</string>
     <string name="navigation_category">Navigation</string>
 
 
-    <!--Owlsnest buttons-->
+    <!--buttons-->
     <string name="buttons_title">Hardware buttons</string>
-    <string name="buttons_summary">Tweak the actions of your devices physical buttons</string>
+    <string name="buttons_summary">Tweak hardware buttons</string>
     <string name="powermenu_category">Power</string>
 
 
-    <!--Owlsnest recentscreen-->
+    <!--recentscreen-->
     <string name="recent_title">Recents</string>
     <string name="recent_summary">Configure which recents style and options</string>
     <string name="stock_recent">Stock</string>
 
 
-    <!--Owlsnest Gestures-->
+    <!--Gestures-->
     <string name="gesture_category">Gesture</string>
     <string name="gesture_summary">Gesture based options/actions</string>
 
 
-    <!--Owlsnest lockscreen-->
+    <!--lockscreen-->
     <string name="lockscreen_title">Lockscreen</string>
     <string name="lockscreen_summary">Customize lockscreen layout and options</string>
     <string name="options_category">Various</string>
 
 
-    <!--Owlsnest advanced-->
+    <!--advanced-->
     <string name="advanced_title">Advanced Settings</string>
     <string name="advanced_summary">Misc and extra system settings</string>
     <string name="system_category">System Settings</string>
