--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -101,6 +101,8 @@
     <string name="options_category">Various</string>
     <string name="face_auto_unlock_title">Face auto unlock</string>
     <string name="face_auto_unlock_summary">Dismiss lockscreen after face unlocking</string>
+    <string name="fprint_sucess_vib_title">Fingerprint authentication vibration</string>
+    <string name="fprint_sucess_vib_summary">Vibrate on successful fingerprint authentication</string>
 
     <!--advanced-->
     <string name="advanced_title">Advanced Settings</string>
