--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -62,7 +62,12 @@
     <string name="quicksettings_title">Quick Settings</string>
     <string name="quicksettings_summary">Manage your quick tiles and expanded statusbar</string>
     <string name="expanded_category">Expanded</string>
-    <string name="qs_category">Qs Options</string>
+    <string name="qs_category">Quick settings</string>
+    <string name="qs_style_category_title">Quick Settings Options</string>
+    <string name="qs_show_brightness_title">Brightness slider</string>
+    <string name="qs_show_brightness_summary">Show a brightness slider in the quick settings panel</string>
+    <string name="qs_brightness_position_bottom_title">Brightness slider on bottom</string>
+    <string name="qs_brightness_position_bottom_summary">Show a brightness slider on bottom quick settings</string>
 
     <!--navigation-->
     <string name="navigation_title">Navigation</string>
