--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -75,6 +75,19 @@
     <string name="navigation_category">Navigation</string>
     <string name="navbar_tuner_title">Edit navigation bar</string>
     <string name="navbar_tuner_summary">Edit the navigation bar layout and buttons</string>
+    <string name="allow_incall_home_title">Home button when ringing</string>
+    <string name="allow_incall_home_summary">Allow to use Home button when device is ringing</string>
+    <string name="hardware_keys_category">Hardware keys</string>
+    <string name="button_brightness_title">Backlight</string>
+    <string name="backlight_timeout_title">Buttons backlight timeout</string>
+    <string name="backlight_timeout_on">Enabled always</string>
+    <string name="backlight_timeout_3s">3 sec</string>
+    <string name="backlight_timeout_default">5 sec (default)</string>
+    <string name="backlight_timeout_10s">10 sec</string>
+    <string name="backlight_timeout_15s">15 sec</string>
+    <string name="backlight_timeout_20s">20 sec</string>
+    <string name="backlight_timeout_30s">30 sec</string>
+    <string name="button_brightness_sw_title">Enable backlight</string>
 
     <!--buttons-->
     <string name="buttons_title">Hardware buttons</string>
