--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -56,7 +56,8 @@
     <string name="notification_title">Notification</string>
     <string name="notification_summary">Adjust LEDs and notification behavior</string>
     <string name="notification_category">Notifications</string>
-
+    <string name="headsup_category">Heads Up</string>
+    <string name="heads_up_notifications">Heads up options</string>
 
     <!--Quick settings-->
     <string name="quicksettings_title">Quick Settings</string>
@@ -68,6 +69,7 @@
     <string name="qs_show_brightness_summary">Show a brightness slider in the quick settings panel</string>
     <string name="qs_brightness_position_bottom_title">Brightness slider on bottom</string>
     <string name="qs_brightness_position_bottom_summary">Show a brightness slider on bottom quick settings</string>
+    <string name="qs_panel_alpha_title">Opacity</string>
 
     <!--navigation-->
     <string name="navigation_title">Navigation</string>
