Add Volume category to lab
Signed-off-by: Dabug123 <clarkbrunswick55@gmail.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -167,6 +167,7 @@
     <string name="powermenu_torch">Flashlight</string>
     <string name="powermenu_users">Users</string>
     <string name="powermenu_logout">Logout</string>
+    <string name="volume_category">Volume Keys</string>
 
     <!--recentscreen-->
     <string name="recent_title">Recents</string>
