--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -168,6 +168,8 @@
     <string name="powermenu_users">Users</string>
     <string name="powermenu_logout">Logout</string>
     <string name="volume_category">Volume Keys</string>
+    <string name="volume_rocker_music_controls_title">Playback control</string>
+    <string name="volume_rocker_music_controls_summary">When the screen is off, long-pressing the volume keys will seek music tracks</string>
 
     <!--recentscreen-->
     <string name="recent_title">Recents</string>
