--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -170,6 +170,8 @@
     <string name="volume_category">Volume Keys</string>
     <string name="volume_rocker_music_controls_title">Playback control</string>
     <string name="volume_rocker_music_controls_summary">When the screen is off, long-pressing the volume keys will seek music tracks</string>
+    <string name="volume_rocker_wake_title">Volume rocker wake</string>
+    <string name="volume_rocker_wake_summary">Pressing the volume keys will wake your device</string>
 
     <!--recentscreen-->
     <string name="recent_title">Recents</string>
