--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -138,6 +138,8 @@
     <string name="qs_brightness_position_bottom_title">Brightness slider on bottom</string>
     <string name="qs_brightness_position_bottom_summary">Show a brightness slider on bottom quick settings</string>
     <string name="qs_panel_alpha_title">Opacity</string>
+    <string name="qs_footer_warnings_title">QS footer warnings</string>
+    <string name="qs_footer_warnings_summary">Display a warning at bottom of QS panel when network is monitored by external apps or vpn</string>
 
     <!--navigation-->
     <string name="navigation_title">Navigation</string>
