Statusbar brightness control [2/2]

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -92,6 +92,8 @@
     <string name="clock_date_format">Date format</string>
     <string name="clock_date_string_edittext_title">Must be in DateFormat eg. MM/dd/yy</string>
     <string name="clock_date_string_edittext_summary">Enter string</string>
+    <string name="status_bar_toggle_brightness">Brightness control</string>
+    <string name="status_bar_toggle_brightness_summary">Adjust brightness by sliding across the status bar</string>
 
     <!--Notification-->
     <string name="notification_title">Notification</string>
