--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -262,6 +262,8 @@
     <string name="fprint_sucess_vib_title">Fingerprint authentication vibration</string>
     <string name="fprint_sucess_vib_summary">Vibrate on successful fingerprint authentication</string>
     <string name="lockscreen_tuner_title">Lockscreen shortcuts</string>
+    <string name="media_art_title">Media cover art</string>
+    <string name="media_art_summary">Enable media cover art on the lockscreen</string>
 
     <!--advanced-->
     <string name="advanced_title">Advanced Settings</string>
