--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -94,6 +94,8 @@
     <string name="clock_date_string_edittext_summary">Enter string</string>
     <string name="status_bar_toggle_brightness">Brightness control</string>
     <string name="status_bar_toggle_brightness_summary">Adjust brightness by sliding across the status bar</string>
+    <string name="show_fourg_icon_title">4G icon</string>
+    <string name="show_fourg_icon_summary">Display 4G icon in signal icon instead LTE</string> 
 
     <!--Notification-->
     <string name="notification_title">Notification</string>
