--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -248,6 +248,9 @@
     <string name="recents_clear_all_location_bottom_right">Bottom right</string>
     <string name="recents_clear_all_location_bottom_left">Bottom left</string>
     <string name="recents_clear_all_location_bottom_center">Bottom center</string>
+    <string name="hide_apps_from_recents_title">Hide apps from recents</string>
+    <string name="hide_from_recents_add_app">Add App</string>
+    <string name="hide_apps_from_recents_summary">Select certian apps to hide in recents</string>
 
     <!--Gestures-->
     <string name="gesture_category">Gesture</string>
