--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -278,6 +278,8 @@
     <string name="advanced_title">Advanced Settings</string>
     <string name="advanced_summary">Misc and extra system settings</string>
     <string name="system_category">System Settings</string>
+    <string name="keyboard_title">Keyboard</string>
+    <string name="keyboard_summary">Alter certain functions of the stock keyboard</string>
 
 </resources>
 
