--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -162,8 +162,8 @@
     <string name="expanded_category">Expanded</string>
     <string name="qs_category">Quick settings</string>
     <string name="qs_style_category_title">Quick Settings Options</string>
-    <string name="qs_show_brightness_title">Brightness slider</string>
-    <string name="qs_show_brightness_summary">Show a brightness slider in the quick settings panel</string>
+    <string name="brightness_slider_title">Brightness slider</string>
+    <string name="brightness_slider_summary">Show the brightness slider in quick settings</string>
     <string name="qs_brightness_position_bottom_title">Brightness slider on bottom</string>
     <string name="qs_brightness_position_bottom_summary">Show a brightness slider on bottom quick settings</string>
     <string name="brightness_icon_title">Auto Brightness Icon</string>
